Form has multiple parts of type: "Title Header". Improved check on last super part and added quickfix for deleting duplicate part Case: SVY-3818